<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlavorFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.rasyidcode.cupcakeapp2.model.OrderViewModel" />

        <variable
            name="flavorFragment"
            type="com.rasyidcode.cupcakeapp2.FlavorFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_padding">

            <LinearLayout
                android:id="@+id/flavor_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.isQuantityMoreThanOne() ? View.GONE : View.VISIBLE}"
                    tools:visibility="visible">

                    <RadioButton
                        android:id="@+id/vanilla"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
                        android:onClick="@{ () -> viewModel.setFlavor(@string/vanilla) }"
                        android:text="@string/vanilla" />

                    <RadioButton
                        android:id="@+id/chocolate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
                        android:onClick="@{ () -> viewModel.setFlavor(@string/chocolate) }"
                        android:text="@string/chocolate" />

                    <RadioButton
                        android:id="@+id/red_velvet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.flavor.equals(@string/red_velvet)}"
                        android:onClick="@{ () -> viewModel.setFlavor(@string/red_velvet) }"
                        android:text="@string/red_velvet" />

                    <RadioButton
                        android:id="@+id/salted_caramel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.flavor.equals(@string/salted_caramel)}"
                        android:onClick="@{ () -> viewModel.setFlavor(@string/salted_caramel) }"
                        android:text="@string/salted_caramel" />

                    <RadioButton
                        android:id="@+id/coffee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.flavor.equals(@string/coffee)}"
                        android:onClick="@{ () -> viewModel.setFlavor(@string/coffee) }"
                        android:text="@string/coffee" />

                    <RadioButton
                        android:id="@+id/coconut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.flavor.equals(@string/coconut)}"
                        android:onClick="@{ () -> viewModel.setFlavor(@string/coconut) }"
                        android:text="@string/coconut" />

                    <RadioButton
                        android:id="@+id/special_flavor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.flavor.equals(@string/special_flavor)}"
                        android:onClick="@{ () -> flavorFragment.handleSpecialFlavor() }"
                        android:text="@string/special_flavor" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.isQuantityMoreThanOne() ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/vanilla_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isFlavorsContain(@string/vanilla)}"
                        android:onClick="@{ () -> viewModel.setFlavors(@string/vanilla) }"
                        android:text="@string/vanilla" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/chocolate_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isFlavorsContain(@string/chocolate)}"
                        android:onClick="@{ () -> viewModel.setFlavors(@string/chocolate) }"
                        android:text="@string/chocolate" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/red_velvet_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isFlavorsContain(@string/red_velvet)}"
                        android:onClick="@{ () -> viewModel.setFlavors(@string/red_velvet) }"
                        android:text="@string/red_velvet" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/salted_caramel_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isFlavorsContain(@string/salted_caramel)}"
                        android:onClick="@{ () -> viewModel.setFlavors(@string/salted_caramel) }"
                        android:text="@string/salted_caramel" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/coffee_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isFlavorsContain(@string/coffee)}"
                        android:onClick="@{ () -> viewModel.setFlavors(@string/coffee) }"
                        android:text="@string/coffee" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/coconut_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isFlavorsContain(@string/coconut)}"
                        android:onClick="@{ () -> viewModel.setFlavors(@string/coconut) }"
                        android:text="@string/coconut" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/special_flavor_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isFlavorsContain(@string/special_flavor)}"
                        android:onClick="@{ () -> flavorFragment.handleSpecialFlavor() }"
                        android:text="@string/special_flavor" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flavor_options" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.Cupcake.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@{@string/subtotal_price(viewModel.price)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="Subtotal $5.00" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_margin"
                android:onClick="@{() -> flavorFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/next_button" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:onClick="@{() -> flavorFragment.goToNextScreen() }"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/subtotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>